@@ -39,14 +39,14 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>${mockito.version}</version>
+            <version>5.12.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-junit-jupiter</artifactId>
-            <version>${mockito.version}</version>
-            <scope>test</scope>
+           <groupId>org.mockito</groupId>
+    <artifactId>mockito-inline</artifactId>
+    <version>5.12.0</version>
+    <scope>test</scope>
         </dependency>
 
         <!-- Servlet API -->
@@ -74,8 +74,14 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M7</version>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>3.1.2</version>
+    <configuration>
+        <argLine>
+            --add-opens java.base/java.sql=ALL-UNNAMED
+            --add-opens java.base/java.lang=ALL-UNNAMED
+        </argLine>
+    </configuration>
                 <configuration>
                     <includes>
                         <include>**/*Test.java</include>
